project-3-rag/kubernetes/qdrant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qdrant
  labels:
    name: qdrant
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
